Adding the home page and a base.html file for all other pages to extends

--- a/making_pizza/templates/making_pizza/index.html
+++ b/making_pizza/templates/making_pizza/index.html
@@ -1,3 +1,5 @@
-<p>Making Pizza</p>
+{% extends 'making_pizza/base.html' %}
 
+{% block content %}
 <p>You can easily make your own pizza here!</p>
+{% endblock content %}
