--- a/making_pizza/templates/making_pizza/base.html
+++ b/making_pizza/templates/making_pizza/base.html
@@ -1,7 +1,8 @@
 <p>
     <a href="{% url 'making_pizza:index' %}">Home</a> - 
     <a href="{% url 'making_pizza:pizzas' %}">Pizzas</a> - 
-    <a href="{% url 'making_pizza:new_pizza'%}">Order</a>
+    <a href="{% url 'making_pizza:orders' %}">Orders</a> - 
+    <a href="{% url 'making_pizza:new_order'%}">Order</a>
 </p>
 
 {% block content%}{% endblock content %}
