--- a/making_pizza/templates/making_pizza/new_order.html
+++ b/making_pizza/templates/making_pizza/new_order.html
@@ -3,7 +3,7 @@
 {% block content %}
     <p>Create your own pizza:</p>
 
-    <form action="{% url 'making_pizza:new_pizza' %}" method="post">
+    <form action="{% url 'making_pizza:new_order' %}" method="post">
         {% csrf_token %}
         {{ form.as_div }}
         <button name="submit">Add Pizza</button>
